[gd_scene load_steps=4 format=3 uid="uid://dm7qq8ju4vmuv"]

[ext_resource type="Texture2D" uid="uid://dgaci1rhq0qm3" path="res://assets/Projectile_4_A.png" id="1_fw86s"]
[ext_resource type="Script" uid="uid://b6spm8s40je8k" path="res://scripts/enemybullet.gd" id="1_gb0c3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gb0c3"]
height = 38.0

[node name="enemybullet" type="Area2D"]
z_index = -1
collision_layer = 8
collision_mask = 5
script = ExtResource("1_gb0c3")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 3.14159
scale = Vector2(0.274, 0.274)
texture = ExtResource("1_fw86s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_gb0c3")

[node name="bulletlife" type="Timer" parent="."]
wait_time = 5.0

[connection signal="area_entered" from="." to="." method="_on_ebullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_ebulletbody_entered"]
[connection signal="timeout" from="bulletlife" to="." method="_on_bulletlife_timeout"]
